# portfolio

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  setup.sh
.github/workflows/: cd.yml
src/data_privacy/: Dockerfile  app.py
