[tool.poetry]
name = "litdantic"
version = "0.0.1"
description = "StreamLit Based Data Role Portfolio"
authors = ["Oscar Bahamonde <o.bahamonde@globant.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.33.0"
pydantic = "^2.7.1"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
